Fixed gap on card3
- Removed a gap on card3
- Width adjustments card3
- Margin bottom for programming section

--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ p {
   margin-top: 10px;
   margin-left: 10px;
   margin-right: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   background-color: rgb(53, 52, 52);  
   align-items: flex-start;
   justify-content: center;
@@ -390,8 +390,7 @@ p {
   flex-grow: 1;
   background-color: rgb(53, 52, 52);
   padding: 60px; /* 60px */
-  width: 70%;
-  height:10%;
+  width: 85%;
   /* padding-bottom: 100px; */
   border-right: 0.9px solid black;
   /* border-left: 0.9px solid black; */
@@ -466,6 +465,7 @@ p {
   height: 10%;
   border-left: 0.9px solid black;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .card4 p {
@@ -498,6 +498,7 @@ p {
   padding-right: 75px;
   padding-bottom: 25px;
   position: relative;
+  margin-bottom: 10px;
 }
 
 .cursor {
